# battery_project

./: .gitignore  README.md  config.yaml  rul_linear.py
BatteryVisualizer/: BatteryVisualizer.sln
BatteryVisualizer/BatteryVisualizer/: App.xaml  App.xaml.cs  BatteryVisualizer.csproj  MainWindow.xaml  MainWindow.xaml.cs
BatteryVisualizer/BatteryVisualizer/Models/: BatteryData.cs
BatteryVisualizer/BatteryVisualizer/ViewModels/: MainViewModel.cs
core-engine/: CMakeLists.txt
core-engine/include/: kalman_soh.h
core-engine/src/: core_engine.cpp  kalman_soh.cpp
ml-service/: debug_capacity.py  prepare_data_cycle.py  prepare_data_isu_ilcc.py  test_core.py  test_core_meanstd.py  train_soh.py  utils.py
ml-service/tests/: test_core.py
